# domain/models/partner_company.go
@@ -13,3 +13,10 @@ type PartnerCompany struct {
 func (PartnerCompany) TableName() string {
 	return "partner_companies"
 }
+
+type PartnerCompanyEmbed struct {
+	PartnerCompany
+	PartnerCompanyBankAccount *PartnerCompanyBankAccount `gorm:"foreignKey:ID;references:PartnerCompanyID"`
+}
+
+type PartnerCompanyEmbedList []*PartnerCompanyEmbed
